# fa-crawler

./: .env.template  .gitignore  README.md  pyproject.toml
batch/crawl/news/: crawl_google_news_rss.py
batch/crawl/trend/: crawl_google_trends.py
fa_crawler/: settings.py
fa_crawler/crawler/: base_crawler.py
fa_crawler/crawler/news/google/: __init__.py  keyword_rss_crawler.py  topic_rss_crawler.py
fa_crawler/crawler/trend/: __init__.py  google_trend_crawler.py
fa_crawler/crawler/twitter/: api.py  trend_crawler.py
fa_crawler/db/rdb/: __init__.py  db.py  session.py
fa_crawler/db/rdb/models/: base.py
fa_crawler/db/rdb/models/company/: __init__.py  announcement.py  company.py  sector.py
fa_crawler/db/rdb/models/financial/: __init__.py  yfinance.py
fa_crawler/db/rdb/models/news/: __init__.py  google_news.py
fa_crawler/db/rdb/models/stock/: __init__.py  stockprice.py
fa_crawler/db/rdb/models/trend/: __init__.py  google.py
fa_crawler/repository/rdb/: base.py
fa_crawler/repository/rdb/news/: __init__.py  google_news.py
fa_crawler/repository/rdb/trend/: __init__.py  google.py
fa_crawler/schema/news/: __init__.py  google.py
fa_crawler/schema/trend/: __init__.py  google.py
fa_crawler/utils/: logger.py
tests/crawler/: test_google_news_crawler.py  test_google_trends_crawler.py
