[tool.poetry]
name = "fa-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "fa_crawler" },
]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
PyYAML = "^6.0"
pydantic = "^1.10.2"
mysqlclient = "^2.1.1"
pandas = "^1.5.0"
feedparser = "^6.0.10"
timeout-decorator = "^0.5.0"
schedule = "^1.1.0"
pytrends = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
